# codebase-explainer-agent

./: .commit-msg.tmp  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
eval/golden_cases/: README.md
eval/golden_cases/basket_graph_analytics/: 01_def_build_graph.toml  02_def_recommend.toml  03_design_dfs_visit.toml  README.md
src/codebase_explainer/: __main__.py  agent.py  chat.py  demo.py  index_repo.py  indexer.py  main.py  persistence.py  repo_walker.py  resolver.py  schema.py
src/codebase_explainer/embeddings/: __init__.py  chunker.py  embedder.py  store.py
src/codebase_explainer/eval/: __init__.py  case.py  judges.py  report.py  runner.py  scorers.py
src/codebase_explainer/tools/: __init__.py  definitions.py  find_callers.py  find_definition.py  grep.py  read_file.py  search_semantic.py  view_symbol.py
tests/: conftest.py  test_agent_compat.py  test_calls.py  test_chat.py  test_demo.py  test_embeddings.py  test_eval.py  test_imports.py  test_index_repo.py  test_indexer.py  test_persistence.py  test_repo_walker.py  test_resolver.py  test_schema.py  test_search_semantic.py  test_smoke.py  test_tools.py
